--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="social-footer">
           <p class="social-text">Social media</p>
           <ul class="social-list-end list">
             <li class="social-list-item-end">
@@ -540,7 +540,130 @@
             </li>
           </ul>
         </div>
+        <form class="form-footer">
+          <label class="form-titel"
+            >Subscribe
+            <input
+              class="footer-email"
+              type="email"
+              name="user-email"
+              placeholder="E-mail"
+            />
+          </label>
+          <button class="footer-button" type="submit">
+            Subscribe
+            <svg
+              class="footer-icon"
+              width="24"
+              height="24"
+              aria-label="Frame-icon"
+            >
+              <use href="./images/icons.svg#icon-Frame-3"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
+    <!-- BACKDROP WITH MODAL WINDOW -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-button">
+          <svg
+            class="close-button-icon"
+            aria-label="close button icon"
+            width="8"
+            height="8"
+          >
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+
+        <p class="text-modal">leave your contacts and we will call you back</p>
+
+        <form class="form-modal">
+          <div class="form-modal-conteiner">
+            <label class="form-modal-label">
+              Name
+              <div class="label-conteiner">
+                <input class="inpute-modal" type="text" name="name-user" />
+                <svg
+                  class="form-icons"
+                  width="18"
+                  height="18"
+                  aria-label="name user"
+                >
+                  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                </svg>
+              </div>
+            </label>
+
+            <label class="form-modal-label">
+              Phone
+              <div class="label-conteiner">
+                <input class="inpute-modal" type="tel" name="phone-user" />
+                <svg
+                  class="form-icons"
+                  width="18"
+                  height="18"
+                  aria-label="phone user"
+                >
+                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                </svg>
+              </div>
+            </label>
+
+            <label class="form-modal-label">
+              Email
+              <div class="label-conteiner">
+                <input class="inpute-modal" type="email" name="email-user" />
+                <svg
+                  class="form-icons"
+                  width="18"
+                  height="18"
+                  aria-label="email user"
+                >
+                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                </svg>
+              </div>
+            </label>
+
+            <label class="form-modal-label">
+              Comment
+              <textarea
+                class="coments"
+                name="user-coments"
+                id=""
+                placeholder="Text input"
+              ></textarea>
+            </label>
+          </div>
+
+          <div class="chec-conteiner">
+            <input
+              class="chec-box visually-hidden"
+              type="checkbox"
+              name="user-agri"
+              id="chec-box"
+            />
+            <label class="chec-label" for="chec-box">
+              <span class="text-chec">
+                <svg
+                  class="icon-click"
+                  width="16"
+                  height="16"
+                  aria-label="icon click"
+                >
+                  <use href="./images/icons.svg#icon-Property-1click-2"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="text-chec-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="buttom-mod" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
