--- a/index.html
+++ b/index.html
@@ -490,9 +490,8 @@
             >Web<span class="secondery-logo-text">Studio </span>
           </a>
           <p class="end-text">
-            Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
           </p>
         </div>
         <div class="social-footer">
@@ -540,34 +539,34 @@
             </li>
           </ul>
         </div>
-        <form class="form-footer">
-          <label class="form-titel"
-            >Subscribe
+        <div class="subscribe-conteiner">
+          <p class="form-titel">Subscribe</p>
+          <form class="form-footer">
             <input
               class="footer-email"
               type="email"
               name="user-email"
               placeholder="E-mail"
             />
-          </label>
-          <button class="footer-button" type="submit">
-            Subscribe
-            <svg
-              class="footer-icon"
-              width="24"
-              height="24"
-              aria-label="Frame-icon"
-            >
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </button>
-        </form>
+            <button class="footer-button" type="submit">
+              Subscribe
+              <svg
+                class="footer-icon"
+                width="24"
+                height="24"
+                aria-label="Frame-icon"
+              >
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="close-button">
+        <button class="close-button" typ="button">
           <svg
             class="close-button-icon"
             aria-label="close button icon"
@@ -581,62 +580,69 @@
         <p class="text-modal">leave your contacts and we will call you back</p>
 
         <form class="form-modal">
-          <div class="form-modal-conteiner">
-            <label class="form-modal-label">
-              Name
-              <div class="label-conteiner">
-                <input class="inpute-modal" type="text" name="name-user" />
-                <svg
-                  class="form-icons"
-                  width="18"
-                  height="18"
-                  aria-label="name user"
-                >
-                  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-                </svg>
-              </div>
-            </label>
-
-            <label class="form-modal-label">
-              Phone
-              <div class="label-conteiner">
-                <input class="inpute-modal" type="tel" name="phone-user" />
-                <svg
-                  class="form-icons"
-                  width="18"
-                  height="18"
-                  aria-label="phone user"
-                >
-                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                </svg>
-              </div>
-            </label>
-
-            <label class="form-modal-label">
-              Email
-              <div class="label-conteiner">
-                <input class="inpute-modal" type="email" name="email-user" />
-                <svg
-                  class="form-icons"
-                  width="18"
-                  height="18"
-                  aria-label="email user"
-                >
-                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-                </svg>
-              </div>
-            </label>
-
-            <label class="form-modal-label">
-              Comment
-              <textarea
-                class="coments"
-                name="user-coments"
-                id=""
-                placeholder="Text input"
-              ></textarea>
-            </label>
+          <label class="form-modal-label" for="user-name"> Name</label>
+          <div class="label-conteiner">
+            <input
+              class="inpute-modal"
+              type="text"
+              name="name-user"
+              id="user-name"
+            />
+            <svg
+              class="form-icons"
+              width="18"
+              height="18"
+              aria-label="name user"
+            >
+              <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+            </svg>
           </div>
+
+          <label class="form-modal-label" for="user-phone"> Phone</label>
+          <div class="label-conteiner">
+            <input
+              class="inpute-modal"
+              type="tel"
+              name="phone-user"
+              id="user-phone"
+            />
+            <svg
+              class="form-icons"
+              width="18"
+              height="18"
+              aria-label="phone user"
+            >
+              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+            </svg>
+          </div>
+
+          <label class="form-modal-label" for="user-email"> Email</label>
+          <div class="label-conteiner">
+            <input
+              class="inpute-modal"
+              type="email"
+              name="email-user"
+              id="user-email"
+            />
+            <svg
+              class="form-icons"
+              width="18"
+              height="18"
+              aria-label="email user"
+            >
+              <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+            </svg>
+          </div>
+
+          <label class="form-modal-label" for="user-coments">
+            Comment
+            <textarea
+              class="coments"
+              name="user-coments"
+              id="user-coments"
+              placeholder="Text input"
+            ></textarea>
+          </label>
 
           <div class="chec-conteiner">
             <input
