--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     <!-- BACKDROP WITH MODAL WINDOW -->
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="close-button" typ="button">
+        <button class="close-button" type="button">
           <svg
             class="close-button-icon"
             aria-label="close button icon"
