--- a/index.html
+++ b/index.html
@@ -542,12 +542,15 @@
         <div class="subscribe-conteiner">
           <p class="form-titel">Subscribe</p>
           <form class="form-footer">
-            <input
-              class="footer-email"
-              type="email"
-              name="user-email"
-              placeholder="E-mail"
-            />
+            <label for="user-email" class="forms-label">
+              <input
+                class="footer-email"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+                id="user-email"
+              />
+            </label>
             <button class="footer-button" type="submit">
               Subscribe
               <svg
@@ -580,93 +583,97 @@
         <p class="text-modal">leave your contacts and we will call you back</p>
 
         <form class="form-modal">
-          <label class="form-modal-label" for="user-name"> Name</label>
-          <div class="label-conteiner">
-            <input
-              class="inpute-modal"
-              type="text"
-              name="name-user"
-              id="user-name"
-            />
-            <svg
-              class="form-icons"
-              width="18"
-              height="18"
-              aria-label="name user"
-            >
-              <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-            </svg>
+          <div class="form-modal-conteiner">
+            <label class="form-modal-label" for="user-name"> Name</label>
+            <div class="label-conteiner">
+              <input
+                class="inpute-modal"
+                type="text"
+                name="name-user"
+                id="user-name"
+              />
+              <svg
+                class="form-icons"
+                width="18"
+                height="18"
+                aria-label="name user"
+              >
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-
-          <label class="form-modal-label" for="user-phone"> Phone</label>
-          <div class="label-conteiner">
-            <input
-              class="inpute-modal"
-              type="tel"
-              name="phone-user"
-              id="user-phone"
-            />
-            <svg
-              class="form-icons"
-              width="18"
-              height="18"
-              aria-label="phone user"
-            >
-              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-            </svg>
+          <div class="form-modal-conteiner">
+            <label class="form-modal-label" for="user-phone"> Phone</label>
+            <div class="label-conteiner">
+              <input
+                class="inpute-modal"
+                type="tel"
+                name="phone-user"
+                id="user-phone"
+              />
+              <svg
+                class="form-icons"
+                width="18"
+                height="18"
+                aria-label="phone user"
+              >
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-
-          <label class="form-modal-label" for="user-email"> Email</label>
-          <div class="label-conteiner">
-            <input
-              class="inpute-modal"
-              type="email"
-              name="email-user"
-              id="user-email"
-            />
-            <svg
-              class="form-icons"
-              width="18"
-              height="18"
-              aria-label="email user"
-            >
-              <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-            </svg>
+          <div class="form-modal-conteiner">
+            <label class="form-modal-label" for="user-email"> Email</label>
+            <div class="label-conteiner">
+              <input
+                class="inpute-modal"
+                type="email"
+                name="email-user"
+                id="user-email"
+              />
+              <svg
+                class="form-icons"
+                width="18"
+                height="18"
+                aria-label="email user"
+              >
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
           </div>
-
-          <label class="form-modal-label" for="user-coments">
-            Comment
-            <textarea
-              class="coments"
-              name="user-coments"
-              id="user-coments"
-              placeholder="Text input"
-            ></textarea>
-          </label>
-
-          <div class="chec-conteiner">
-            <input
-              class="chec-box visually-hidden"
-              type="checkbox"
-              name="user-agri"
-              id="chec-box"
-            />
-            <label class="chec-label" for="chec-box">
-              <span class="text-chec">
-                <svg
-                  class="icon-click"
-                  width="16"
-                  height="16"
-                  aria-label="icon click"
-                >
-                  <use href="./images/icons.svg#icon-Property-1click-2"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a class="text-chec-link" href="">Privacy Policy</a>
+          <div class="form-modal-conteiner">
+            <label class="form-modal-label" for="user-coments">
+              Comment
+              <textarea
+                class="coments"
+                name="user-coments"
+                id="user-coments"
+                placeholder="Text input"
+              ></textarea>
             </label>
-          </div>
 
+            <div class="chec-conteiner">
+              <input
+                class="chec-box visually-hidden"
+                type="checkbox"
+                name="user-agri"
+                id="chec-box"
+              />
+              <label class="chec-label" for="chec-box">
+                <span class="text-chec">
+                  <svg
+                    class="icon-click"
+                    width="16"
+                    height="16"
+                    aria-label="icon click"
+                  >
+                    <use href="./images/icons.svg#icon-Property-1click-2"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a class="text-chec-link" href="">Privacy Policy</a>
+              </label>
+            </div>
+          </div>
           <button class="buttom-mod" type="submit">Send</button>
         </form>
       </div>
