--- a/index.html
+++ b/index.html
@@ -589,13 +589,13 @@
               <input
                 class="inpute-modal"
                 type="text"
-                name="name-user"
+                name="user-name"
                 id="user-name"
               />
               <svg
                 class="form-icons"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="name user"
               >
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
@@ -608,13 +608,13 @@
               <input
                 class="inpute-modal"
                 type="tel"
-                name="phone-user"
+                name="user-phone"
                 id="user-phone"
               />
               <svg
                 class="form-icons"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="phone user"
               >
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
@@ -627,20 +627,20 @@
               <input
                 class="inpute-modal"
                 type="email"
-                name="email-user"
+                name="user-email"
                 id="user-email"
               />
               <svg
                 class="form-icons"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="email user"
               >
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-          <div class="form-modal-conteiner">
+          <div class="form-modal-conteiner-textarea">
             <label class="form-modal-label" for="user-coments">
               Comment
               <textarea
