--- a/index.html
+++ b/index.html
@@ -641,16 +641,16 @@
             </div>
           </div>
           <div class="form-modal-conteiner-textarea">
-            <label class="form-modal-label" for="user-coments">
+            <label class="form-modal-label" for="user-coment">
               Comment
               <textarea
                 class="coments"
-                name="user-coments"
-                id="user-coments"
+                name="user-coment"
+                id="user-coment"
                 placeholder="Text input"
               ></textarea>
             </label>
-
+</div>
             <div class="chec-conteiner">
               <input
                 class="chec-box visually-hidden"
