--- a/index.html
+++ b/index.html
@@ -641,12 +641,12 @@
             </div>
           </div>
           <div class="form-modal-conteiner-textarea">
-            <label class="form-modal-label" for="user-coment">
+            <label class="form-modal-label" for="user-comment">
               Comment
               <textarea
-                class="coments"
-                name="user-coment"
-                id="user-coment"
+                class="comments"
+                name="user-comment"
+                id="user-comment"
                 placeholder="Text input"
               ></textarea>
             </label>
@@ -655,15 +655,16 @@
               <input
                 class="chec-box visually-hidden"
                 type="checkbox"
-                name="user-agri"
-                id="chec-box"
+                name="user-privacy"
+                id="user-privacy"
+                value="true"
               />
-              <label class="chec-label" for="chec-box">
+              <label class="chec-label" for="user-privacy" >
                 <span class="text-chec">
                   <svg
                     class="icon-click"
-                    width="16"
-                    height="16"
+                    width="10"
+                    height="8"
                     aria-label="icon click"
                   >
                     <use href="./images/icons.svg#icon-Property-1click-2"></use>
