--- a/index.html
+++ b/index.html
@@ -542,13 +542,13 @@
         <div class="subscribe-conteiner">
           <p class="form-titel">Subscribe</p>
           <form class="form-footer">
-            <label for="user-email" class="forms-label">
+            <label for="user-email-fotter" class="forms-label">
               <input
                 class="footer-email"
                 type="email"
-                name="user-email"
+                name="user-email-fotter"
                 placeholder="E-mail"
-                id="user-email"
+                id="user-email-fotter"
               />
             </label>
             <button class="footer-button" type="submit">
